# SegOCR

./: .gitignore  CharSeg Dataset BrainStorming.txt  CharSeg Training Brainstorming.txt  SegOCR_Implementation_Guide.docx  SegOCR_Master_Prompt.docx  SegOCR_Research_Proposal.docx  pyproject.toml  requirements.txt
docs/: USAGE.md
kaggle/: 00_generate_dataset.ipynb  00a_generate_dataset_a.ipynb  00b_generate_dataset_b.ipynb  01_train_worker0.ipynb  02_train_worker1.ipynb  03_train_worker2.ipynb  04_train_worker3.ipynb  05_train_worker4.ipynb  06_train_workers_1_2.ipynb  07_train_workers_3_4.ipynb  08_test_ensemble.ipynb  README.md  _build_dual_train_notebooks.py  _build_generate_notebook.py  _build_test_notebook.py  _build_train_notebooks.py
notebooks/: segocr_colab_experiment.ipynb  segocr_colab_longrun.ipynb  segocr_colab_quickstart.ipynb
requirements/: base.txt  train.txt
scripts/: average_runs.py  evaluate.py  generate_dataset.py  setup_data.ps1  setup_data.sh  train_model.py
segocr/: __init__.py
segocr/adaptation/: __init__.py  cyclegan.py  dann.py  fda.py  self_training.py
tests/: conftest.py  test_background.py  test_charset.py  test_cleanup.py  test_compositor.py  test_config_loads.py  test_dataset.py  test_degradation.py  test_engine.py  test_evaluator.py  test_font_manager.py  test_imports.py  test_instance_extraction.py  test_layout.py  test_losses.py  test_metrics.py  test_multi_account.py  test_placement.py  test_reading_order.py  test_renderer.py  test_saliency.py  test_targets.py  test_text_sampler.py  test_train_resume.py  test_unet.py
(+38 files in other folders)
